--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,4 @@
 <button (click)="change()">Click me</button>
 <br>
 <br>
-<input type="text" [(ngModel)]="text" >
-<p> {{text}} </p>
+<input type="text"  >
